<resources>
    <string name="app_name">FoodOnTouch</string>

    <string name="logout">LOGOUT</string>
    <string name="pantry_stock">PANTRY STOCK</string>
    <string name="beverages">Beverages</string>
    <string name="snacks">Snacks   </string>
    <string name="meals">Meals    </string>
    <string name="order_status">Order Status</string>
    <string name="announcement">Announcement</string>

    <string name="connected_user">GUESTS\nCONNECTED</string>
    <string name="orders_received">ORDERS\nRECEIVED</string>

    <string name="send_invoice_btn_text">SEND INVOICE</string>
    <string name="send_reminder_btn_text">SEND REMINDER</string>
    <string name="completed">Completed</string>
    <string name="served">SERVED</string>
    <string name="some_delay">SOME DELAY</string>

    <string name="item_price">£ %1$.2f</string>

    <string-array name="tabs_text">
        <item>SERVICE\nPENDING</item>
        <item>PAYMENT\nPENDING</item>
        <item>COMPLETED\nORDERS</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
