<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="10dp"
    android:layout_marginLeft="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/pantry_stock"
            android:textColor="@android:color/black"
            android:textSize="25dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-10dp"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true">


        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_beverages" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/meal_image"
            android:text="@string/beverages"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true">


        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_snacksa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/meal_image"
            android:text="@string/snacks"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true">

        <ImageView
            android:id="@+id/meal_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_foods" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/meal_image"
            android:text="@string/meals"
            android:textColor="@android:color/black"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="-10dp"
            android:background="@android:color/darker_gray" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/connected_users_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/connected_users"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_multiuser" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/connected_users"
                android:text="@string/connected_user"
                android:textColor="@color/service_pending"
                android:textSize="18sp" />

            <com.hack.headout.widget.CircularView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="53dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/total_guests_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="61dp"
                android:layout_marginTop="10dp"
                android:text="00"
                android:textColor="@color/order_complete"
                android:textSize="22sp" />
        </RelativeLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

            <ImageView
                android:id="@+id/connected_users"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_orderreceived" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/connected_users"
                android:text="@string/orders_received"
                android:textColor="@color/service_pending"
                android:textSize="18sp" />

            <com.hack.headout.widget.CircularView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="53dp"
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/total_order_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="61dp"
                android:layout_marginTop="10dp"
                android:text="00"
                android:textColor="@color/order_complete"
                android:textSize="22sp" />

    </RelativeLayout>

</LinearLayout>