<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@mipmap/ic_person_white_48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_centerHorizontal="true"
            android:text="David Lopez"
            android:textColor="@android:color/white" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>


    <LinearLayout
        android:id="@+id/order_status_area"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_orderreceived" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>

    <LinearLayout
        android:id="@+id/announcement_area"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/announcement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_announcement" />


        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announcement"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>

    <LinearLayout
        android:id="@+id/logout_area"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:drawable/list_selector_background"
        android:clickable="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_exit_to_app_black_36dp" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>

</LinearLayout>